<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElevenDates</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="facebook_app_id">764133570339332</string>
    <string name="title_activity_main">ElevenDates</string>
    <string name="failButton">Fail Button</string>
    <string name="passButton">Pass Button</string>
    <string name="action_matches">Matches</string>
    <string name="action_profile">Profile</string>
    <string name="profileImage">Profile Image</string>
    <string name="passImage">Pass Image</string>
    <string name="failImage">Fail Image</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="genderBoth">Both</string>
    <string name="discoverable">Discoverable</string>
    <string name="age">Age</string>
    <string name="show">Show</string>
    <string name="profile_saved">Profile Saved</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="error">"Error: "</string>

</resources>
