<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.elevenfifty.www.elevendates.ProfileActivity">

    <RelativeLayout
        android:id="@+id/nameGenderRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            style="@style/ProfileText"/>

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/genderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderMale"
                android:id="@+id/genderMale"
                style="@style/RadioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderFemale"
                android:id="@+id/genderFemale"
                style="@style/RadioButton"  />
        </info.hoang8f.android.segmented.SegmentedGroup>
    </RelativeLayout>
    <ImageView
        android:contentDescription="@string/profileImage"
        android:id="@+id/photoImage"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_marginBottom="10dp" />

    <RelativeLayout
        android:id="@+id/DiscoverableRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/discoverable"
            style="@style/ProfileText"/>

        <Switch
            android:id="@+id/discoverable"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ageRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/age"
            style="@style/ProfileText"/>

        <TextView
            android:id="@+id/ageLabel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ProfileText" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ageLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/ageBar"
            android:max="79" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/genderPrefRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/show"
            style="@style/ProfileText"/>

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/genderPrefGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderMale"
                android:id="@+id/genderPrefMale"
                style="@style/RadioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderFemale"
                android:id="@+id/genderPrefFemale"
                style="@style/RadioButton"  />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderBoth"
                android:id="@+id/genderPrefBoth"
                style="@style/RadioButton"  />
        </info.hoang8f.android.segmented.SegmentedGroup>
    </RelativeLayout>

</LinearLayout>